crates/canvas-cli/tests/e2e/snapshots/alias_remove_table.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: body
---
exit: 0
--- stdout ---
  NAME    COURSE_ID    CODE  
--- stderr ---
