crates/canvas-cli/tests/e2e/snapshots/assignment_json.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: value
---
{
  "exit": 0,
  "freshness": [
    {
      "complete": true,
      "count": 1,
      "dataset": "assignment",
      "fetched_at": "2040-09-09T17:05:12Z",
      "scope": "assignment:60009",
      "source": "cache",
      "stale": false
    }
  ],
  "generated_at": "2040-09-09T17:05:12Z",
  "identity": {
    "key": "<identity>",
    "origin": "<origin>",
    "user_id": "60001"
  },
  "outcome": "ok",
  "partial": [],
  "profile": null,
  "requests": {
    "api": 0,
    "cost": null,
    "storage": 0
  },
  "result": {
    "assignment": {
      "allowed_attempts": 2,
      "allowed_extensions": [
        "pdf"
      ],
      "availability": {
        "external": false,
        "lock_at": null,
        "lock_at_local": null,
        "lock_explanation": null,
        "locked": false,
        "submittable": true,
        "unlock_at": null,
        "unlock_at_local": null
      },
      "can_submit": true,
      "comments_count": null,
      "course_id": "60100",
      "description_markdown": "Synthetic exercise: sort the symbols X, Y, and Z.",
      "due_at": "2040-09-20T03:59:00Z",
      "due_at_local": "2040-09-19T23:59:00-04:00",
      "external_tool_name": null,
      "extra_attempts": null,
      "group_assignment": false,
      "html_url": "<origin>/courses/60100/assignments/60009",
      "id": "60009",
      "name": "Synthetic Assignment",
      "points_possible": 100.0,
      "rubric": [],
      "rubric_assessed": false,
      "rubric_assessment": [],
      "status": {
        "attempt": 1,
        "excused": null,
        "grade": null,
        "graded": false,
        "late": null,
        "missing": false,
        "pending": false,
        "posted_at": null,
        "score": null,
        "submitted": true,
        "submitted_at": null,
        "submitted_at_local": null,
        "workflow_state": "submitted"
      },
      "submission_types": [
        "online_upload"
      ]
    }
  },
  "schema": "canvas-cli/assignment@1",
  "warnings": []
}
