crates/canvas-cli/tests/e2e/snapshots/assignment_table.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: body
---
exit: 0
--- stdout ---
  ID       Course    Name                    Due                                  Status     
  60009              Synthetic Assignment    Wed Sep 19, 11:59 PM (in 10d 10h)    submitted  

Synthetic exercise: sort the symbols X, Y, and Z.
Submission types: online_upload
Allowed extensions: pdf
Attempts: 2, extra: unknown
can_submit: true
Unlock: unknown
Lock: unknown
<origin>/courses/60100/assignments/60009
--- stderr ---
